--- a/FPTBook/Views/Books/Details.cshtml
+++ b/FPTBook/Views/Books/Details.cshtml
@@ -55,10 +55,12 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Store)
         </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Store.Id)
+        </dd>
 
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Isbn">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="List">Back to List</a>
 </div>
