--- a/FPTBook/Views/Carts/Index.cshtml
+++ b/FPTBook/Views/Carts/Index.cshtml
@@ -6,30 +6,63 @@
 
 <h1>Giỏ hàng của bạn</h1>
 
-<table class="table">
+@if(Model.Count() >0)
+{
+    int stt = 1;
+    double total = 0;
+    <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.UId)
+                #
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.BookIsbn)
+                @Html.DisplayNameFor(model => model.Book.Title)
             </th>
-            <th></th>
+            <th>
+                @Html.DisplayNameFor(model => model.Book.Price)
+            </th>
+            <th>
+                 @Html.DisplayNameFor(model => model.Quantity)
+            </th>
+            <th>
+               Total Item
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
+                double tien = item.Book.Price * item.Quantity;
+                total = total + tien;
+                <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.User.Id)
+                @(stt++)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Book.Isbn)
+                @Html.DisplayFor(modelItem => item.Book.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Book.Price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Quantity)
+            </td>
+            <td>
+                @(tien)
             </td>
         </tr>
 }
+<tr>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td>Total: @(total)</td>
+</tr>
     </tbody>
-</table>
-
-<a asp-controller="Books" asp-action="Checkout">Checkout</a>
+    </table>
+    <a asp-controller="Books" asp-action="Checkout">Checkout</a>
+}
+else
+{
+    <p class="alert alert-danger">Check out Successfully</p>
+}
