--- a/FPTBook/Views/OrderDetails/managerOrder.cshtml
+++ b/FPTBook/Views/OrderDetails/managerOrder.cshtml
@@ -49,7 +49,7 @@
                     @Html.DisplayFor(modelItem => item.Book.Title)
                 </td>
                 <td>
-                    @((item.Order.Total)/(item.Book.Price))
+                    @Html.DisplayFor(modelItem => item.Quantity)
                 </td>
                  <td>
                     @Html.DisplayFor(modelItem => item.Order.OrderDate)
