--- a/FPTBook/Views/Shared/_Layout.cshtml
+++ b/FPTBook/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Manage Books</a>
                         </li>  
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="OrderDetails" asp-action="managerOrder">Manager Order</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="sellHistoryOrder">Manager Order</a>
                         </li>
                         }
                         @if (User.IsInRole("Customer"))
