--- a/FPTBook/Views/OrderDetails/Index.cshtml
+++ b/FPTBook/Views/OrderDetails/Index.cshtml
@@ -4,12 +4,13 @@
     ViewData["Title"] = "Seller";
 }
 
-<h1>Index</h1>
+<h1>Your History Order</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+@if(Model.Count() > 0)
+{
+    int stt = 1;
+    double total = 0;
+    <table class="table">
     <thead>
         <tr>
             <th>
@@ -22,14 +23,21 @@
                 @Html.DisplayNameFor(model => model.Book.Title)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Order.OrderDate)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Order.Total)
             </th>
-           
+           <th>
+                @Html.DisplayNameFor(model => model.Book.StoreId)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
+                double itemPrice = item.Book.Price*item.Quantity;
+                total = itemPrice + total;
         <tr>
              <td>
                 @Html.DisplayFor(modelItem => item.Order.User.UserName)
@@ -41,12 +49,31 @@
                 @Html.DisplayFor(modelItem => item.Book.Title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Order.Total)
+                @Html.DisplayFor(modelItem => item.Order.OrderDate)
             </td>
             <td>
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                 @(Math.Round(itemPrice,1))
             </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Book.StoreId)
+            </td>
+           @* <td>
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            </td>*@
         </tr>
 }
+<tr>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td>Total: @(Math.Round(total,1))</td>
+    <td></td>
+</tr>
     </tbody>
-</table>
+    </table>
+}
+else
+{
+    <p class="alert alert-danger">No Order</p>
+}
