--- a/FPTBook/Views/Shared/_Layout.cshtml
+++ b/FPTBook/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                         @if (User.IsInRole("Customer"))
                         {
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="OrderDetails" asp-action="Index">History Order</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">History Order</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Carts" asp-action="Index">Cart</a>
