--- a/FPTBook/Views/Carts/Index.cshtml
+++ b/FPTBook/Views/Carts/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Giỏ hàng của bạn</h1>
+<h1>Your Cart</h1>
 
 @if(Model.Count() >0)
 {
@@ -67,5 +67,5 @@
 }
 else
 {
-    <p class="alert alert-danger">Check out Successfully</p>
+    <p class="alert alert-danger">Your cart is null</p>
 }
